	PR c++/31749

gcc/cp/
	* name-lookup.c (do_nonmember_using_decl): Shift implicit type
	declarations into appropriate slots for comparison.  Fix type
	comparison.

	gcc/testsuite/
	* g++.dg/lookup/builtin3.C: New test.
	* g++.dg/lookup/builtin4.C: New test.
	* g++.dg/lookup/using19.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127600 138bc75d-0d04-0410-961f-82ee72b054a4